tests/good/simple30.tig
var x := 1/(1-(range(1,10) * 0))
