tests/bad/simple18.tig
var x := 2
var y := (x := x-1; range(0,1)) | (x := x-1; 0)
var z := 1/x